# sTasks

./: README.md  meson.build
data/: com.ixsvf.stasks.desktop  meson.build  stasks.gresource.xml
data/scripts/: install_update_github_desktop.sh
debian/: changelog  control  copyright  files  rules
po/: POTFILES.in  meson.build  pt_PT.po  stasks.pot
src/: about.vala  main.vala  meson.build  window.vala
